--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
+                <br>
+                <button class="button-draw2" onclick="reiniciar()" aria-label="Sortear amigo secreto">
+                    <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
+                    Reiniciar
+                </button>
             </div>
         </section>
     </main>
