Crear footer en index

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 </button>
             </div>
         </section>
+        <footer style="text-align: center;">
+            <p class="footer-text">Desarrollado por <a href="
+            https://www.linkedin.com/in/cristian-larios/" target="_blank">Cristian Larios</a></p>
+        </footer>
     </main>
 
     <script src="app.js" defer></script>
